# quick-py

./: .copier-answers.yml.jinja  .gitignore  CLAUDE.md  README.md  copier.yml
.claude/: CLAUDE.md
.github/workflows/: test.yml
template/: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml
template/.claude/: CLAUDE.md
template/.claude/commands/: gh.md
template/.github/workflows/: ci.yml  publish.yml  release.yml
template/docs/: PROJECT_SUMMARY.md  QUICKSTART.md
template/src/{{cookiecutter.package_name}}/: __init__.py  api.py  core.py  logger.py  main.py
template/src/{{package_name}}/: api.py  logger.py
template/tests/: conftest.py  test_api.py  test_core.py  test_logger.py  test_main.py  test_{{cookiecutter.package_name}}.py
template/{% if cookiecutter.ci_provider == 'github' %}.github{% endif %}/workflows/: ci.yml  publish.yml  release.yml
