[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ project_slug }}"
version = "{{ version }}"
description = "{{ description }}"
readme = "README.md"
requires-python = ">={{ python_version }}"
license = { text = "{{ license }}" }
authors = [
    { name = "{{ author_name }}", email = "{{ author_email }}" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
{% if python_version == '3.11' -%}
    "Programming Language :: Python :: 3.11",
{% endif -%}
{% if python_version == '3.12' -%}
    "Programming Language :: Python :: 3.12",
{% endif -%}
{% if python_version == '3.13' -%}
    "Programming Language :: Python :: 3.13",
{% endif %}
]

dependencies = [
    "rich>=13.0.0",
{% if add_api -%}
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
{% endif %}
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "{{ repository_provider }}/{{ repository_username }}/{{ project_slug }}"
Repository = "{{ repository_provider }}/{{ repository_username }}/{{ project_slug }}.git"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ package_name }}"]

[tool.ruff]
line-length = {{ line_length }}
target-version = "py{{ python_version | replace('.', '') }}"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["src/{{ package_name }}"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
